--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Les Bonnes Affaires De Bibi</string>
+    <string name="action_menu_un">Accueil</string>
+    <string name="action_menu_deux">Ajouter annonce</string>
+    <string name="action_menu_trois">Favoris</string>
+    action_deux
+
 </resources>
