--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Les Bonnes Affaires De Bibi</string>
     <string name="action_menu_un">Accueil</string>
-    <string name="action_menu_deux">Ajouter annonce</string>
-    <string name="action_menu_trois">Favoris</string>
+    <string name="action_menu_deux">Déposer annonce</string>
+    <string name="action_menu_trois">Modifier annonce</string>
+    <string name="action_menu_quatre">Favoris</string>
+    <string name="action_menu_cinq">Connexion</string>
     action_deux
 
 </resources>
