Added Menu to every Activity + Menu Activity Items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Les Bonnes Affaires De Bibi</string>
+    <string name="app_name">LesBonnesAffairesDeBibi.fr</string>
     <string name="connexion_l_application_message_manager">Connexion à l\'application Message Manager</string>
     <string name="identifiant">Identifiant</string>
     <string name="valider">Valider</string>
@@ -8,9 +8,7 @@
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="todo">TODO</string>
     <string name="loading">loading</string>
-    <string name="action_list">Listes des annonces</string>
     <string name="envoyer">Envoyer</string>
-    <string name="se_souvenir_de_moi">Se souvenir de moi</string>
     <string name="mot_de_passe">Mot de passe</string>
     <string name="utilisateur">Nom d\'utilisateur</string>
     <string name="vider">Vider</string>
