--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,21 +1,18 @@
 <resources>
     <string name="app_name">LesBonnesAffairesDeBibi.fr</string>
+    <string name="AddEntryActivityTitle">LesBonnesAffairesDeBibi.fr</string>
+    <string name="ContactSellerActivity">LesBonnesAffairesDeBibi.fr</string>
+    <string name="DetailEntryActivityTitle">LesBonnesAffairesDeBibi.fr</string>
+    <string name="EditEntryActivityTitle">LesBonnesAffairesDeBibi.fr</string>
+    <string name="FavoriteActivityTitle">LesBonnesAffairesDeBibi.fr</string>
+    <string name="HomepageActivityTitle">LesBonnesAffairesDeBibi.fr</string>
     <string name="connexion_l_application_message_manager">Connexion à l\'application Message Manager</string>
-    <string name="identifiant">Identifiant</string>
-    <string name="valider">Valider</string>
-    <string name="title_activity_dashboard">ActivityDashboard</string>
-    <string name="action_settings">Settings</string>
-    <string name="section_format">Hello World from section: %1$d</string>
-    <string name="todo">TODO</string>
-    <string name="loading">loading</string>
     <string name="envoyer">Envoyer</string>
-    <string name="mot_de_passe">Mot de passe</string>
-    <string name="utilisateur">Nom d\'utilisateur</string>
     <string name="vider">Vider</string>
     <string name="search_hint" />
     <string name="app_search" />
-    <string name="action_add">Déposer une annonce</string>
-    <string name="action_edit">Modifier une annonce</string>
-    <string name="action_favorites">Favoris</string>
-    <string name="action_home">Accueil</string>
+    <string name="menu_add">Déposer une annonce</string>
+    <string name="menu_edit">Modifier une annonce</string>
+    <string name="menu_favorite">Favoris</string>
+    <string name="menu_home">Accueil</string>
 </resources>
